# FinTrack

./: Makefile  README.md  main.py  pyproject.toml
src/cli/: alerts.py  main.py  reports.py  transactions.py
src/models/: Category.py  Report.py  Transaction.py  enums.py
src/repositories/: CategoryRepository.py  ReportRepository.py  SQLiteCategoryRepository.py  SQLiteReportRepository.py  SQLiteTransactionRepository.py  TransactionRepository.py
src/services/: AlertService.py  ReportService.py  TransactionService.py
src/tests/: conftest.py
src/tests/integration/: test_sqlite_category_repository.py  test_sqlite_report_repository.py  test_sqlite_transaction_repository.py
src/tests/unit/: test_category.py  test_report.py  test_transaction.py
