[project]
name = "fintrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "rich>=15.0.0",
    "ruff>=0.15.17",
]

[project.scripts]
fintrack = "cli.main:cli"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/models", "src/repositories", "src/services"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
